# drishti

./: .env.example  .gitignore  LICENSE  README.md  RUNBOOK.md  audit.db
apps/agent/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
apps/agent/drishti_agent/: __init__.py  audit_client.py  events.py  main.py  orchestrator.py  prompts.py  state.py
apps/agent/drishti_agent/tools/: bureau.py  consent.py  document.py  face.py  fraud.py  offer.py  session.py
apps/agent/tests/: test_offer_session_regressions.py
apps/web/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/token/: route.ts
apps/web/app/architecture/: page.tsx
apps/web/app/audit/: page.tsx
apps/web/app/audit/[sessionId]/: page.tsx
apps/web/app/compliance/: page.tsx
apps/web/app/ops/: page.tsx
apps/web/app/session/[id]/: page.tsx
apps/web/components/brand/: EyeMark.tsx
apps/web/components/call/: CallRoom.tsx  CallStatusBar.tsx  Confetti.tsx  ConsentDialog.tsx  EndScreen.tsx  FraudBanner.tsx  FraudSignalBoard.tsx  LiveCaptions.tsx  OfferCard.tsx  PanCapture.tsx  ProfileConfirmCard.tsx  ProgressSteps.tsx  RiskGauge.tsx  SelfVideoTile.tsx  SignalsPanel.tsx  TechStackBar.tsx
apps/web/components/nav/: TopNav.tsx
apps/web/components/orb/: VoiceOrb.tsx
apps/web/lib/: api.ts  events.ts  store.ts  utils.ts
apps/web/tests/: event-contract.test.ts
demo/: scenario_a.md  scenario_b.md  scenario_c.md
docs/: architecture.md  compliance.md  fraud.md  policy.md  tools.md
infra/: railway.agent.toml  railway.api.toml  railway.web.toml
services/api/: Dockerfile  pyproject.toml  railway.toml  requirements.txt
services/api/api/: __init__.py  main.py
services/api/api/artifacts/: risk_meta.json  risk_model.onnx
services/api/api/core/: audit_chain.py  bureau_db.py  face_match.py  fraud_aggregator.py  policy_engine.py  risk_model.py
services/api/api/data/: grid.yaml  rules.yaml
services/api/api/routers/: audit.py  bureau.py  fraud.py  policy.py  risk.py
services/api/tests/: test_policy_regressions.py
services/api/train/: synthetic_data.py  train_risk.py
