[project]
name = "drishti-agent"
version = "0.1.0"
description = "Drishti — agentic AI loan officer (LiveKit Agents worker)"
requires-python = ">=3.11"
dependencies = [
  "livekit-agents==0.11.3",
  "livekit-plugins-anthropic==0.2.16",
  "livekit-plugins-deepgram==0.6.18",
  "livekit-plugins-cartesia==0.4.10",
  "livekit-plugins-silero==0.7.4",
  "anthropic==0.39.0",
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "structlog==24.4.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0", "ruff==0.7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["drishti_agent*"]
