[project]
name = "drishti-agent"
version = "0.1.0"
description = "Drishti — agentic AI loan officer (LiveKit Agents worker)"
requires-python = ">=3.11"
dependencies = [
  # Pinned to versions verified working locally (matches `pip freeze` of the
  # agent venv). Earlier pins like `livekit-plugins-anthropic==0.2.16` were
  # phantom — that version was never published to PyPI.
  "livekit-agents==0.12.21",
  "livekit-plugins-anthropic==0.2.14",
  "livekit-plugins-deepgram==0.7.4",
  "livekit-plugins-cartesia==0.4.12",
  "livekit-plugins-silero==0.7.6",
  "av==17.0.1",
  "anthropic==0.97.0",
  "httpx==0.28.1",
  "pydantic==2.13.3",
  "structlog==25.5.0",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0", "ruff==0.7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["drishti_agent*"]
