[project]
name = "drishti-api"
version = "0.1.0"
description = "Drishti backend services: policy, risk, fraud, bureau-mock, audit"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.31.0",
  "pydantic==2.9.2",
  "pyyaml==6.0.2",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "lightgbm==4.5.0",
  "shap==0.46.0",
  "onnxruntime==1.19.2",
  "onnxmltools==1.12.0",
  "skl2onnx==1.17.0",
  "python-multipart==0.0.12",
  "httpx==0.27.2",
  "structlog==24.4.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0", "ruff==0.7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
